k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations: # an additional high level configuration that will be applied to Ingress object to be created
    nginx.ingress.kubernetes.io/use-regex: 'true' # comfigure K8S to create ingress service based on the Nginx project
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # this is to tell the nginx to rewrite all path such as '/api' to '/'
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*) # this path will be rewritten due to the annotation config above
            pathType: ImplementationSpecific
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
